August 24, 2025
    Updated about addon to warn about mismatched imports.
    Updated about addon to have more coverage on location settings.
    Added a refresh link on the About tab to refresh game version and imports warning without reloading the script.
    Added requested memory functions for modrons.

August 15, 2025
    Updated HeroHasFeats memory functions to properly error when reads fail.
    Added an Add function to ActiveEffectKeyHandlers so addon creators can more easily add their own champions.
    Added ReadClickLevel, ReadSplashVideoActive, and ReadHeroUpgradeRequiredLevelByIndex to memory functions.
    Fixed a bug with how user settings are loaded.
    Added feature to automatically open Addon Management window if no addons are loaded.

August 14, 2025
    Added latest version check to the Addons window.
        Edit Settings.json in the main SH folder and change/add "CheckForUpdates":0 to disable.
    Added option to add a proxy server in Settings.json for server calls.
    Added an outdated addons check on the About tab.

August 11, 2025
    Fixed new bug with dictionary objects that made it into the last update.
    Fixed memory reads that tried to check if a champion was fully leveled, but lost their reference values in the dll.
    Updated teh GameObjectStructure with some significant changes.
        - Cleaned up __Get() code and broke functionality into smaller functions for better readability.
        - Added "__version" as new variable for checking a collection's version. Requires Imports update.
        - Added caching to volatile dictionaries which resets on their version updating rather than resetting on every read.
        - Added new Helper functions DoesCollectionNeedReset and ResetCollection utilizing the version additions above.
       
August 6, 2025
    Fixed issues with pointer addresses not refreshing properly.
    Fixed multiple performance slowdowns.

August 1, 2025
    Updated Readme.md.

August 1, 2025