@@ -1,6 +1,6 @@
 {
 	"Name":"Game Location Settings",
-	"Version": "v0.1.2",
+	"Version": "v0.1.3",
     "Includes" : "IC_GameLocationSettings_Component.ahk",
     "Author" : "Antiletual",
     "Url" : "https://github.com/mikebaldi/Idle-Champions/tree/main/AddOns/IC_GameLocationSettings",
