@@ -3,6 +3,8 @@ August 24, 2025
     Updated about addon to have more coverage on location settings.
     Added a refresh link on the About tab to refresh game version and imports warning without reloading the script.
     Added requested memory functions for modrons.
+    Moved version checking functionality to the About tab.
+    Added a toggle to turn off version checking on startup.
 
 August 15, 2025
     Updated HeroHasFeats memory functions to properly error when reads fail.
